########################################################################
## Octave plugin integration
########################################################################
add_subdirectory(amarisoft-plugin)
# add_subdirectory(octave)

########################################################################
## freedesktop environment integration
########################################################################
add_subdirectory(Desktop)

########################################################################
## QuickTest software
########################################################################
# add_subdirectory(QuickTest)

########################################################################
## SoapySDR bindings
########################################################################
add_subdirectory(SoapyLMS7)
